[tool.poetry]
name = "icli"
version = "0.8.3"
description = "ibkr cli et al"
authors = ["Matt Stancliff <matt@genges.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# IB API wrapper with better usability than the IBKR-provided libs
ib-insync = "^0.9.66"

# nice printing and data manipulation
pandas = ">2.1.0"

# easy time access
pendulum = {version = "^3.0.0b1", allow-prereleases = true}

# running / logging
prompt-toolkit = "^3.0.29"
loguru = ">0.6.0"

# for multi-step cli prompts
questionary = "^1.9.0"
tableprint = "^0.9.1"

# for ANSI console color gradients
seaborn = "^0.12.2"

# for audio output
pygame = "^2.0.1"

# for showing nice things
prettyprinter = "^0.18.0"
setproctitle = "^1.2.2"

# saving things and converting IBKR HTML news into readable text
diskcache = "^5.2.1"
beautifulsoup4 = "^4.9.3"

# our API helpers and wrappers
tradeapis = { git = "https://github.com/mattsta/tradeapis.git", tag="2.4.1" }

[tool.poetry.scripts]
icli = "icli.__main__:runit"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
data-science-types = "^0.2.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
